--- a/styles2.css
+++ b/styles2.css
@@ -1,6 +1,6 @@
 .odd {
     background-color: hsl(345, 100%, 80%);
-    font-family: Verdana, Geneva, Tahoma, sans-serif
+    font-family: Verdana, "DejaVu Sans", sans-serif
 }
 
 #two {
@@ -8,7 +8,7 @@
     font-size: 36px;
 }
 
-#three {
+.odd.cool {
     font-size: 24px;
 }
 
